fixing mobile menu layout issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,12 +71,18 @@ body {
   top: 60px;
   left: 0;
   height: calc(100vh - 60px);
-  flex-direction: column;
   justify-content: stretch;
   padding: 50px 20px;
-  flex-direction: column-reverse;
   overflow-y: auto;
   animation: show ease-in-out 0.5s;
+
+  > ul {
+    order: 1;
+  }
+
+  > div {
+    order: 2;
+  }
 
   &::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
